actualizacion del nombre

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="mainNavbar">
         <div class="container">
             <a class="navbar-brand" href="#" style="transition: all 0.3s ease;">
-                <span class="text-danger fw-bold" style="text-shadow: 0 0 5px rgba(255,0,0,0.5);">Moto</span>max
+                <span class="text-danger fw-bold" style="text-shadow: 0 0 5px rgba(255,0,0,0.5);">Moto</span>GP
                 <small class="d-block text-muted fs-6" id="slogan">Tu tienda de motos online</small>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -321,7 +321,7 @@
 
                 <!-- Copyright con efecto -->
                 <div class="text-center copyright-section">
-                    <p class="mb-0">&copy; <span id="currentYear"></span> Motomax. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; <span id="currentYear"></span> MotoGP. Todos los derechos reservados.</p>
                     <div class="d-flex justify-content-center mt-2">
                         <a href="#" class="text-white mx-2 small hover-underline">Términos y condiciones</a>
                         <span class="text-muted">|</span>
